<resources>
    <string name="app_name">Calculator</string>
    <string name="white">#FFFFFF</string>
    <string name="black">#000000</string>
    <string name="dark_button">#2F4F4F</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="umn">&#xD7;</string>
    <string name="delenie">&#x00F7;</string>
    <string name="ravn">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="udalit">Удалить</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="gotocalc">CLose history</string>
    <string name="history">History</string>
</resources>
