<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidline1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <TextView
        android:id="@+id/pole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/nothing"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/White_text"
        android:gravity="end|center"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:textSize="55sp"/>

    <Button
        android:id="@+id/plus"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/plus"
        android:textSize="40sp"
        android:textColor="@color/White_text"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guidline3" />

    <Button
        android:id="@+id/minus"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/minus"
        android:textSize="40sp"
        android:textColor="@color/White_text"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintStart_toEndOf="@+id/guidline3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/umn"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/umn"
        android:textSize="40sp"
        android:textColor="@color/White_text"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toTopOf="@id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guidline3"
        />

    <Button
        android:id="@+id/del"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/delenie"
        android:textSize="40sp"
        android:textColor="@color/White_text"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toTopOf="@+id/umn"
        app:layout_constraintStart_toEndOf="@+id/guidline3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/ravn"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/ravn"
        android:textSize="40sp"
        android:textColor="@color/White_text"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidline3"
        app:layout_constraintStart_toEndOf="@+id/guidline2" />

    <Button
        android:id="@+id/three"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:textColor="@color/White_text"
        android:background="@color/some_grey"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/ravn"
        app:layout_constraintEnd_toStartOf="@+id/guidline3"
        app:layout_constraintStart_toEndOf="@+id/guidline2"/>

    <Button
        android:id="@+id/six"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:textColor="@color/White_text"
        android:background="@color/some_grey"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/guidline3"
        app:layout_constraintStart_toEndOf="@+id/guidline2"
        />

    <Button
        android:id="@+id/nine"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:textColor="@color/White_text"
        android:background="@color/some_grey"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintStart_toEndOf="@+id/guidline2"
        app:layout_constraintEnd_toStartOf="@+id/guidline3"/>

    <Button
        android:id="@+id/zero"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:textColor="@color/White_text"
        android:background="@color/some_grey"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidline2"
        app:layout_constraintStart_toEndOf="@+id/guidline1"/>

    <Button
        android:id="@+id/point"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:textColor="@color/White_text"
        android:background="@color/some_grey"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidline1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/one"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/some_grey"
        android:text="@string/one"
        android:textColor="@color/White_text"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/point"
        app:layout_constraintEnd_toStartOf="@+id/guidline1"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/two"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:textColor="@color/White_text"
        android:background="@color/some_grey"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/two"
        app:layout_constraintStart_toEndOf="@+id/guidline1"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@id/guidline2"
        />

    <Button
        android:id="@+id/five"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:textColor="@color/White_text"
        android:background="@color/some_grey"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/guidline2"
        app:layout_constraintStart_toEndOf="@+id/guidline1" />

    <Button
        android:id="@+id/four"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:textColor="@color/White_text"
        android:background="@color/some_grey"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/guidline1"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/seven"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:textColor="@color/White_text"
        android:background="@color/some_grey"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/seven"
        app:layout_constraintEnd_toStartOf="@+id/guidline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/four"/>

    <Button
        android:id="@+id/eight"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:textSize="35sp"
        android:textColor="@color/White_text"
        android:background="@color/some_grey"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/guidline2"
        app:layout_constraintStart_toEndOf="@+id/guidline1"/>

    <Button
        android:id="@+id/udalit"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/udalit"
        android:textAllCaps="false"
        android:textColor="@color/White_text"
        android:textSize="15sp"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toTopOf="@+id/del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guidline3" />

    <Button
        android:id="@+id/nothing"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toStartOf="@+id/guidline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/eight"/>
</android.support.constraint.ConstraintLayout>